--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="toast">
          
     </div>
-    <div class="btn">
-        <button onclick="showSuccessToast()"> Success</button>
-        <button onclick="showErrorToast()"> Error</button>
+    <div>
+        <div  class="btn btn--success" onclick="showSuccessToast()"> Success</div>
+        <div  class="btn btn--error" onclick="showErrorToast()"> Error</div>
     </div>
     
     <script src="./app.js"></script>
